# ssm

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  manifest.scm  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
benchmarks/: __init__.py  ops_bench.py
docs/: API.md  DESIGN.md  ROADMAP.md
scripts/: bench_cpu.py  refresh_mamba_goldens.py  regenerate_goldens.py
src/ssm/: __init__.py
src/ssm/models/: __init__.py  config.py  lm.py
src/ssm/modules/: __init__.py  attention.py  block.py  mamba1.py  mamba2.py  mlp.py
src/ssm/ops/: __init__.py
src/ssm/ops/cpu/: __init__.py  (+7 more)
src/ssm/utils/: __init__.py  dispatch.py  generation.py  weights.py
tests/: conftest.py  mamba_reference_cases.json  test_api_signatures.py  test_contracts_shapes.py  test_dispatch_fallbacks.py  test_generation_api.py  test_generation_sampling.py  test_modules_init.py
tests/goldens/: README.md  test_golden_selective_scan.py  test_golden_ssd_chunk_scan.py
tests/goldens/data/: selective_scan_case1.json  selective_scan_grouped.json  ssd_chunk_scan_case1.json  ssd_chunk_scan_varlen.json
tests/goldens/ops/: selective_scan_reference.json
tests/models/: test_generation.py
tests/modules/: test_attention.py  test_block.py  test_mamba1.py  test_mamba2.py  test_mlp.py
tests/ops/: test_backend_gradients.py  test_cpu_ops.py  test_cuda_ops.py  test_reference_ops.py  test_selective_state_step_cpu.py
tests/stress/: test_mixed_precision.py  test_reference_ops_stress.py  test_ssd_chunk_scan.py
tests/utils/: __init__.py  test_dispatch.py  test_generation.py  test_weights.py
(+11 files in other folders)
