[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssm"
version = "0.1.0.dev0"
description = "Selective State Space Models (design-first scaffold)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "SSM Core Authors" }
]
dependencies = [
  "torch",
  "einops",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]
